--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="compteur">0</div>
 
     <pre id="poeme">
-        Les oiseaux de passage
+        <h1>Les oiseaux de passage</h1>
 
         C'est une cour carrée et qui n'a rien d'étrange :
         Sur les flancs, l'écurie et l'étable au toit bas ;
